--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Object files
 *.o
-*.ko
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
+*.bin
+bmd-control
+bmd-extractfw
+bmd-streamer
